# csidh-setup

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix
csidh-tools/: .gitignore  MANIFEST.in  README.md  csidh.sage  pyproject.toml  requirements.txt
csidh-tools/csidh/: __init__.py
csidh-tools/csidh/wrapper/: dll.py
csidh-tools/csidhcw/: __init__.py
csidh-tools/csidhcw/search/: io.py
csidh-tools/csidhcw/wrapper/: dll.py
csidh-tools/csidhtools/: __init__.py
csidh-tools/csidhtools/misc/: parametrization.py
csidh-tools/csidhtools/search/: ga.py  io.py  unit.py
csidh-tools/csidhtools/wrapper/: __init__.py  base.py  cw.py  dll.py
notebooks/: analysis-dummy-free.ipynb  analysis-dummy.ipynb  husky-clock-double-isogeny.ipynb  husky-double-glitch.ipynb  husky-double-glitch.py  husky-double-isogeny-analysis.ipynb  husky-single-glitch.ipynb  husky-single-glitch.py  init.ipynb  parameter-search.ipynb  profile-execution-time.ipynb
notebooks/figures/: parameter-effect-figure.ipynb  parameter-search-figure.ipynb  single-glitch-isogeny-figure.ipynb  timing-diagrams.ipynb
notebooks/misc/: ga-glitches-husky.py
patches/: chipwhisperer.patch  cwlite-hal-makefile.patch
scripts/: cwlite-clock-isogeny-skips-analysis.ipynb  husky-clock-double-isogeny.ipynb  husky-clock-double-isogeny.py  husky-double-isogeny-analysis.ipynb  husky-single-isogeny-analysis.ipynb  husky-voltage-single-isogeny.ipynb  husky-voltage-single-isogeny.py  init.ipynb  parameter-search.ipynb  random-search-vs-genetic algorithm.ipynb  random-search-vs-genetic algorithm.py  trace-figures.ipynb
scripts/csidh/: __init__.py
scripts/figures/: parameter-effect-figure.ipynb
scripts/misc/: cwlite-clock-isogeny-skips-analysis.ipynb  (+1 more)
(+4 files in other folders)
