[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["csidh"]

[project]
dynamic = ["dependencies"]
name = "csidh"
description = "Utilities for glitching on Chipwhisperer, and subsequent analysis of results."
requires-python = ">= 3.11"
authors = [{ name = "tjaros" }]
maintainers = []
readme = { file = "README.md", content-type = "text/markdown" }


[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}
