[build-system]
requires = ["setuptools == 80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["csidhtools"]

[project]
dynamic = ["dependencies", "version"]
name = "csidhtools"
description = "Utilities for glitching CSIDH on Chipwhisperer, and subsequent analysis of results."
requires-python = ">= 3.11"
authors = [{ name = "tjaros" }]
maintainers = []
readme = { file = "README.md", content-type = "text/markdown" }


[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}
